...
  @override
  Widget build(BuildContext context) {
    final t = AppLocalizations.of(context)!;
    double height = MediaQuery.of(context).size.height;
    double width = MediaQuery.of(context).size.width;
    return AppLayout(
      key: const Key('dash_view'),
      route: t.home,
      showAppBar: false,
      body: ListView(
        children: [
          Container(
            height: height / 2.2,
...
